--- a/exam (1) (1).ipynb
+++ b/exam (1) (1).ipynb
@@ -732,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 123,
    "id": "7f18978fee56c6d6",
    "metadata": {
     "ExecuteTime": {
@@ -767,9 +767,17 @@
        "      <th>value_IL</th>\n",
        "      <th>Change_Percentage_IL</th>\n",
        "      <th>difference</th>\n",
+       "      <th>Rate_Comparison</th>\n",
+       "      <th>value_exr</th>\n",
+       "      <th>change</th>\n",
+       "      <th>Rate_Difference</th>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>DATE</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -785,6 +793,10 @@
        "      <td>10.500000</td>\n",
        "      <td>NaN</td>\n",
        "      <td>7.450000</td>\n",
+       "      <td>IH</td>\n",
+       "      <td>2.984731</td>\n",
+       "      <td>0.012694</td>\n",
+       "      <td>7.450000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1994-02</th>\n",
@@ -792,6 +804,10 @@
        "      <td>6.557377</td>\n",
        "      <td>10.500000</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>7.250000</td>\n",
+       "      <td>IH</td>\n",
+       "      <td>2.976826</td>\n",
+       "      <td>-0.007905</td>\n",
        "      <td>7.250000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -801,6 +817,10 @@
        "      <td>10.500000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>7.160000</td>\n",
+       "      <td>IH</td>\n",
+       "      <td>2.971846</td>\n",
+       "      <td>-0.004980</td>\n",
+       "      <td>7.160000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1994-04</th>\n",
@@ -808,6 +828,10 @@
        "      <td>6.586826</td>\n",
        "      <td>10.500000</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>6.940000</td>\n",
+       "      <td>IH</td>\n",
+       "      <td>2.991591</td>\n",
+       "      <td>0.019745</td>\n",
        "      <td>6.940000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -817,9 +841,17 @@
        "      <td>10.919355</td>\n",
        "      <td>3.993856</td>\n",
        "      <td>6.909355</td>\n",
+       "      <td>IH</td>\n",
+       "      <td>3.015077</td>\n",
+       "      <td>0.023486</td>\n",
+       "      <td>6.909355</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -833,6 +865,10 @@
        "      <td>4.750000</td>\n",
        "      <td>4.247788</td>\n",
        "      <td>-0.330000</td>\n",
+       "      <td>N</td>\n",
+       "      <td>3.644636</td>\n",
+       "      <td>-0.015459</td>\n",
+       "      <td>-0.330000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-07</th>\n",
@@ -840,6 +876,10 @@
        "      <td>0.787402</td>\n",
        "      <td>4.750000</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>-0.370000</td>\n",
+       "      <td>N</td>\n",
+       "      <td>3.668350</td>\n",
+       "      <td>0.023714</td>\n",
        "      <td>-0.370000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -849,6 +889,10 @@
        "      <td>4.750000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>-0.580000</td>\n",
+       "      <td>N</td>\n",
+       "      <td>3.745870</td>\n",
+       "      <td>0.077520</td>\n",
+       "      <td>-0.580000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2023-09</th>\n",
@@ -856,6 +900,10 @@
        "      <td>0.000000</td>\n",
        "      <td>4.750000</td>\n",
        "      <td>0.000000</td>\n",
+       "      <td>-0.580000</td>\n",
+       "      <td>N</td>\n",
+       "      <td>3.820158</td>\n",
+       "      <td>0.074288</td>\n",
        "      <td>-0.580000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -865,10 +913,14 @@
        "      <td>4.750000</td>\n",
        "      <td>0.000000</td>\n",
        "      <td>-0.580000</td>\n",
+       "      <td>N</td>\n",
+       "      <td>3.978273</td>\n",
+       "      <td>0.158115</td>\n",
+       "      <td>-0.580000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>358 rows × 5 columns</p>\n",
+       "<p>358 rows × 9 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -886,24 +938,24 @@
        "2023-09      5.33              0.000000   4.750000              0.000000   \n",
        "2023-10      5.33              0.000000   4.750000              0.000000   \n",
        "\n",
-       "         difference  \n",
-       "DATE                 \n",
-       "1994-01    7.450000  \n",
-       "1994-02    7.250000  \n",
-       "1994-03    7.160000  \n",
-       "1994-04    6.940000  \n",
-       "1994-05    6.909355  \n",
-       "...             ...  \n",
-       "2023-06   -0.330000  \n",
-       "2023-07   -0.370000  \n",
-       "2023-08   -0.580000  \n",
-       "2023-09   -0.580000  \n",
-       "2023-10   -0.580000  \n",
+       "         difference Rate_Comparison  value_exr    change  Rate_Difference  \n",
+       "DATE                                                                       \n",
+       "1994-01    7.450000              IH   2.984731  0.012694         7.450000  \n",
+       "1994-02    7.250000              IH   2.976826 -0.007905         7.250000  \n",
+       "1994-03    7.160000              IH   2.971846 -0.004980         7.160000  \n",
+       "1994-04    6.940000              IH   2.991591  0.019745         6.940000  \n",
+       "1994-05    6.909355              IH   3.015077  0.023486         6.909355  \n",
+       "...             ...             ...        ...       ...              ...  \n",
+       "2023-06   -0.330000               N   3.644636 -0.015459        -0.330000  \n",
+       "2023-07   -0.370000               N   3.668350  0.023714        -0.370000  \n",
+       "2023-08   -0.580000               N   3.745870  0.077520        -0.580000  \n",
+       "2023-09   -0.580000               N   3.820158  0.074288        -0.580000  \n",
+       "2023-10   -0.580000               N   3.978273  0.158115        -0.580000  \n",
        "\n",
-       "[358 rows x 5 columns]"
+       "[358 rows x 9 columns]"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 123,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -911,7 +963,7 @@
    "source": [
     "# B - 2\n",
     "# your code here\n",
-    "merged_data['difference'] = merged_data['value_IL'] - merged_data['value_US']\n",
+    "merged_data['Rate_Difference'] = merged_data['value_IL'] - merged_data['value_US']\n",
     "merged_data"
    ]
   },
@@ -975,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 122,
    "id": "fe04eba74c68ab35",
    "metadata": {
     "ExecuteTime": {
@@ -987,10 +1039,10 @@
     {
      "data": {
       "text/plain": [
-       "-0.11745274561921125"
+       "-0.07482147141229512"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -999,7 +1051,7 @@
     "# B - 5\n",
     "# your code here\n",
     "merged_data\n",
-    "correlation = merged_data['difference'].corr(merged_data['value_exr'])\n",
+    "correlation = merged_data['Change_Percentage_US'].corr(merged_data['value_exr'])\n",
     "correlation"
    ]
   },
