--- a/exam new.ipynb
+++ b/exam new.ipynb
@@ -1027,7 +1027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 125,
    "id": "fe04eba74c68ab35",
    "metadata": {
     "ExecuteTime": {
@@ -1039,10 +1039,10 @@
     {
      "data": {
       "text/plain": [
-       "-0.07482147141229512"
+       "0.04242083163330513"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1051,8 +1051,9 @@
     "# B - 5\n",
     "# your code here\n",
     "merged_data\n",
-    "correlation = merged_data['Change_Percentage_US'].corr(merged_data['value_exr'])\n",
-    "correlation"
+    "correlation = merged_data['Rate_Difference'].corr(merged_data['change'])\n",
+    "correlation\n",
+    "#ע''פ הנתונים נראה שכמעט ואין התאמה בין שינוי של ריבית למטבע חליפין"
    ]
   },
   {
